--- a/sass/events.sass
+++ b/sass/events.sass
@@ -11,16 +11,16 @@
       opacity: 0.8
 
     .fc-day
-      background: lighten($orange, 5%)
+      background: lighten($grey, 5%)
 
       &.fc-today
-        background: darken($orange, 5%)
+        background: darken($grey, 5%)
 
     .fc-widget-header
-      background: darken($orange, 5%)
+      background: darken($grey, 5%)
 
     .fc-button
-      background: $orange
+      background: $grey
       outline: none
       border: none
       color: inherit
