--- a/sass/header.sass
+++ b/sass/header.sass
@@ -32,7 +32,7 @@ header
       &:hover, &#isactive
         background: $dark-blue
 
-  @media (max-width: 900px)
+  @media (max-width: 1000px)
     img
       padding-top: 10px
 
@@ -44,7 +44,7 @@ header
   margin-right: 20px
   font-size: 3rem
 
-@media (max-width: 900px)
+@media (max-width: 1000px)
   #mobile-header-toggle
     display: block
 
